--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "testing the dockerfile-parser package",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "node index.js",
     "linter": "eslint ."
   },
@@ -23,11 +24,13 @@
   },
   "homepage": "https://github.com/YashdalfTheGray/parse-dockerfile-test#readme",
   "dependencies": {
+    "@std/esm": "^0.16.0",
     "docker-file-parser": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0"
-  }
+  },
+  "@std/esm":"cjs"
 }
