--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "parse-dockerfile-test",
   "version": "1.0.0",
   "description": "testing the dockerfile-parser package",
-  "main": "index.js",
+  "main": "js/index.js",
   "scripts": {
     "start": "echo \"Using the first test file\" && npm run test1",
     "test": "npm start",
     "linter": "eslint .",
-    "test1": "node index.js ./testfiles/Dockerfile1",
-    "test2": "node index.js ./testfiles/Dockerfile2",
-    "test3": "node index.js ./testfiles/Dockerfile3",
-    "test4": "node index.js ./testfiles/Dockerfile4",
-    "test5": "node index.js ./testfiles/Dockerfile5",
+    "test1": "node js/index.js ./testfiles/Dockerfile1",
+    "test2": "node js/index.js ./testfiles/Dockerfile2",
+    "test3": "node js/index.js ./testfiles/Dockerfile3",
+    "test4": "node js/index.js ./testfiles/Dockerfile4",
+    "test5": "node js/index.js ./testfiles/Dockerfile5",
     "test-all": "npm run test1 && npm run test2 && npm run test3 && npm run test4 && npm run test5"
   },
   "repository": {
@@ -31,12 +31,13 @@
   "homepage": "https://github.com/YashdalfTheGray/parse-dockerfile-test#readme",
   "dependencies": {
     "@std/esm": "^0.16.0",
-    "docker-file-parser": "^1.0.2"
+    "docker-file-parser": "^1.0.2",
+    "typescript": "^2.6.1"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0"
   },
-  "@std/esm":"cjs"
+  "@std/esm": "cjs"
 }
