and we're done here

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@std/esm": "^0.16.0",
     "@types/node": "^8.0.53",
+    "chalk": "^2.3.0",
     "docker-file-parser": "^1.0.2",
     "typescript": "^2.6.1"
   },
